# mini-cad

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  glad.c  main.cpp
src/logic/: AppState.h  ApplicationState.h  Scene.h
src/logic/algebra/: AlgebraUtils.cpp  AlgebraUtils.h  Rect.h
src/logic/algorithms/: BresenhamAlgorithm.cpp  BresenhamAlgorithm.h  FloodFill.cpp  FloodFill.h
src/logic/concepts/: has_id.h  has_name.h  has_selected.h
src/logic/creator/: BeizerPatchCreator.cpp  BezierPatchCreator.h  BezierPatchCreatorParams.h  GregoryPatchCreator.cpp  GregoryPatchCreator.h
src/logic/entities/: SceneNode.h
src/logic/entities/camera/: Camera.cpp  Camera.h
src/logic/entities/frameBuffer/: FrameBuffer.cpp  FrameBuffer.h
src/logic/entities/light/: Light.cpp  Light.h
src/logic/entities/material/: Material.cpp  Material.h
src/logic/entities/mesh/: Mesh.cpp  Mesh.h
src/logic/entities/shader/: Shader.h
src/logic/entities/transformation/: Transformation.cpp  Transformation.h
src/logic/events/: CreateBezierC0Event.h  EntitySelectionChangedEvent.h  PointDeletedEvent.h  PointMovedEvent.h  SelectEntityEvent.h  SelectionChangedEvent.h
src/logic/events/broadcaster/: EventPublisher.h
src/logic/events/create/: CreateBezierC2Event.h  CreateBezierPatch.h  CreateEventsHandler.h  CreateGregoryPatchEvent.h  CreateInterpolatedC2Event.h  CreateIntersectionEvent.h  CreatePointEvent.h  CreateTorusEvent.h
src/logic/events/input/: InputEventsHandler.h  KeyEvent.h  MouseButtonEvent.h  MouseMovedEvent.h  MouseScrolledEvent.h
src/logic/events/point/: PointEventsHandler.h  PointMovedEvent.h
src/logic/events/selection/: ResetSelectionEvent.h  SelectEntityEvent.h  SelectionEventsHandler.h
src/logic/generator/: CircleGenerator.h  CylinderGenerator.h  HyperbolicParaboloidGenerator.h  MeshGenerator.h  MeshGeneratorHelpers.h  ModelGenerator.cpp  ModelGenerator.h  NormOneGenerator.h  ParametrisedMeshGenerator.cpp  ParametrisedMeshGenerator.h  SphereGenerator.h  SphereGeneratorManual.h  TorusGenerator.h  TorusGeneratorManual.h
src/logic/geometry/: BezierC0.h  BezierC2.h  GeometryHelpers.h  GregoryPatch.h  InterpolatedC2.h  PatchC0.h  PatchC2.h  Point.h  Torus.h
src/logic/handlers/: ObjectCreationHandler.h
src/logic/ids/: IdCounter.h
src/logic/importer/: AssetImporter.cpp  AssetImporter.h  ImportResult.cpp  ImportResult.h
src/logic/input/: InputHandler.cpp  InputHandler.h
src/logic/intersections/: Intersectable.h  IntersectableSurface.h  Intersection.h  ParametricSurface.h  SurfaceIntersection.cpp  SurfaceIntersection.h
src/logic/io/: IOUtils.cpp  IOUtils.h  stb_image.h
src/logic/logger/: Logger.h
src/logic/math/algebra/: AlgebraUtils.cpp  AlgebraUtils.h
src/logic/math/graph/: Graph.h  GregoryPatchGraphVertex.h
src/logic/opengl/: OpenGLInstance.cpp  OpenGLInstance.h
src/logic/serializer/: Serializer.cpp  Serializer.h
src/logic/state/: AppState.cpp  AppState.h  EntityType.h  SelectionGroup.h  TransformTree.h
src/logic/texture/: Texture.cpp  Texture.h
src/logic/utils/: VariantUtil.h
src/logic/vertices/: EmptyVertex.h  PositionVertex.h  SplineVertex.h  Vertex.h  is_vertex.h
src/presentation/camera/: camera.cpp  camera.h
src/presentation/gui/: GUI.cpp  GUI.h
src/presentation/gui/creator/: BezierPatchCreatorUI.cpp  BezierPatchCreatorUI.h  GregoryPatchCreatorUI.cpp  GregoryPatchCreatorUI.h
src/presentation/gui/editor/: EditorNodeVisitor.cpp  EditorNodeVisitor.h
src/presentation/gui/intersections/: IntersectionGui.cpp  IntersectionGui.h
src/presentation/gui/node/: NodeDetailsVisitor.cpp  NodeDetailsVisitor.h  StepParametersVisitor.cpp  StepParametersVisitor.h
src/presentation/gui/properties/: PropertiesViewVisitor.cpp  PropertiesViewVisitor.h  PropertyViewVisitor.cpp  PropertyViewVisitor.h
src/presentation/gui/tree/: StepTreeViewVisitor.cpp  StepTreeViewVisitor.h  TreeViewVisitor.cpp  TreeViewVisitor.h
src/presentation/gui/workspaces/: CameraWorkspace.h  CamerasWorkspace.h  CursorWorkspace.h  DebugOverlayModuleWorkspace.h  EntityListWorkspace.h  GizmoModuleWorkspace.h  GridModuleWorkspace.h  LightsWorkspace.h  LogPanelModuleWorkspace.h  MaterialsWorkspace.h  MenuBarModuleWorkspace.h  MeshGeneratorsWorkspace.h  ModulesWorkspaceHelpers.h  NormalRendererModuleWorkspace.h  PhongRendererModuleWorkspace.h  PointWorkspace.h  RandomRendererModuleWorkspace.h  RayCastingModuleWorkspace.h  TransformTreeWorkspace.h  WireframeRenderModuleWorkspace.h
src/presentation/modules/: MeshGenerationModule.h  Module.cpp  Module.h
src/presentation/modules/gui/: DebugOverlayModule.h  GizmoModule.h  LogPanelModule.h  MenuBarModule.h  WorkspaceModule.h
src/presentation/modules/gui/workspaces/: CamerasWorkspace.h  DebugOverlayModuleWorkspace.h  GizmoModuleWorkspace.h  GridModuleWorkspace.h  LightsWorkspace.h  LogPanelModuleWorkspace.h  MaterialsWorkspace.h  MenuBarModuleWorkspace.h  MeshGeneratorsWorkspace.h  ModulesWorkspaceHelpers.h  RandomRendererModule.h  (+6 more)
src/presentation/modules/renderers/: CenterOfMassModule.h  CursorModule.h  GridModule.h  NormalRenderModule.h  PhongRenderModule.h  RandomRenderModule.h  RayCastingModule.h  RenderHelpers.h  VerticalStripedLineModule.h  WireframeRenderModule.h
src/presentation/properties/: Property.h
src/presentation/properties/light/: LightTypeProperty.h  PointLightProperty.cpp  PointLightProperty.h
src/presentation/properties/transformation/: TransformationProperty.cpp  TransformationProperty.h
src/presentation/properties/visitor/: PropertyVisitor.cpp  PropertyVisitor.h
src/presentation/rendering/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelNode.cpp  ModelNode.h
src/presentation/rendering/renderVisitor/: ExecuteStepVisitor.cpp  ExecuteStepVisitor.h  RenderSceneVisitor.cpp  RenderSceneVisitor.h
src/presentation/rendering/shader/: shader.h
src/presentation/scene/steps/: RenderingStep.cpp  RenderingStep.h
src/presentation/scene/tree/: Bindable.h  SceneNode.h  SceneTreeNode.cpp  SceneTreeNode.h  StepTree.h
src/presentation/scene/visitor/: SceneNodeVisitor.h  StepVisitor.h
(+58 files in other folders)
